picohip/src/opto/son/snapshots/picoc__son__parser__lexer__asnmt.snap
---
source: src/son/parser.rs
expression: output
---
[
    Token {
        lexeme: "int",
        typ: KeywordInt,
    },
    Token {
        lexeme: "main",
        typ: Alias,
    },
    Token {
        lexeme: "(",
        typ: PuncLeftParen,
    },
    Token {
        lexeme: ")",
        typ: PuncRightParen,
    },
    Token {
        lexeme: "{",
        typ: PuncLeftBrace,
    },
    Token {
        lexeme: "int",
        typ: KeywordInt,
    },
    Token {
        lexeme: "x",
        typ: Alias,
    },
    Token {
        lexeme: "=",
        typ: Equals,
    },
    Token {
        lexeme: "8",
        typ: LiteralInt,
    },
    Token {
        lexeme: ";",
        typ: PuncSemiColon,
    },
    Token {
        lexeme: "return",
        typ: KeywordRet,
    },
    Token {
        lexeme: "x",
        typ: Alias,
    },
    Token {
        lexeme: ";",
        typ: PuncSemiColon,
    },
    Token {
        lexeme: "}",
        typ: PuncRightBrace,
    },
]
